fixed no zoom on mobile

--- a/styles/build_style.css
+++ b/styles/build_style.css
@@ -946,6 +946,12 @@
       cursor: pointer;
     }
 
+:root {
+  touch-action: pan-x pan-y;
+  height: 100% 
+}
+
+
     .home-button {
       justify-self: start;
       align-items: center;
